Fixed serundeputy alignment in twitter block

--- a/www/themes/serundeputy/sass/partials/_home.scss
+++ b/www/themes/serundeputy/sass/partials/_home.scss
@@ -26,7 +26,7 @@
         }
         .at-serundeputy {
           position: relative;
-          left: 53%;
+          float: right;
         }
       }
     }
